changed color scheme and totals layout

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,4 @@
-$primaryColor: #a888cc;
-$secondaryColor: #eee;
+$primaryColor: #ff893a;
+$secondaryColor: #3a8cff;
 $terciaryColor: #987cb8;
 $backgroundColor: rgb(247, 247, 247);
