--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ nav img {
   color: #ff893a;
   font-weight: bold;
   font-size: 1.3rem;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .totals .country-labels {
@@ -130,6 +132,8 @@ nav img {
   font-family: 'Heebo', sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .totals .country-number {
