--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,4 @@
-$primaryColor: #ff893a;
-$secondaryColor: #3a8cff;
-$terciaryColor: #987cb8;
+$primaryColor: #34701c;
+$secondaryColor: #63954f;
+$terciaryColor: #333;
 $backgroundColor: rgb(247, 247, 247);
