--- a/css/style.scss
+++ b/css/style.scss
@@ -20,8 +20,20 @@ nav {
   width: 100%;
   justify-content: center;
   text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 4rem 0;
+  ::after {
+    content: '';
+    background-image: url(../images/header-background-image.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+  }
   h1 {
     font-size: 3rem;
     font-family: 'Bitter', sans-serif;
@@ -34,6 +46,39 @@ nav {
   }
 }
 
+.loading-content {
+  //display: none;
+  position: fixed;
+  top: 7rem;
+  width: 100%;
+  height: 100%;
+  background-color: $backgroundColor;
+  z-index: 5;
+  .loading-content-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .loader {
+    margin-top: 10rem;
+    position: fixed;
+    border: 1.6rem solid #dfdfdf;
+    border-radius: 50%;
+    border-top: 1.6rem solid $secondaryColor;
+    width: 12rem;
+    height: 12rem;
+    animation: spin 2s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .totals {
   display: flex;
   flex-direction: column;
@@ -41,83 +86,91 @@ nav {
   width: 100%;
 
   .view-by-country {
-    width: 60%;
-    text-align: right;
+    display: inline-block;
+    background-color: $primaryColor;
+    padding: 0.6rem 2.2rem;
+    margin-bottom: 4rem;
 
     a {
-      text-decoration: underline;
-      color: $secondaryColor;
+      text-decoration: none;
+      color: $backgroundColor;
       font-size: 1.4rem;
       font-family: 'Heebo', sans-serif;
     }
   }
 
-  .world-report {
-    display: flex;
-    width: 60%;
-    justify-content: space-evenly;
-    margin-top: 2rem;
-    padding: 1rem 0;
-
-    .world-labels {
-      //padding-right: 2rem;
-      font-size: 1.2rem;
-      font-family: 'Heebo', sans-serif;
-      color: $secondaryColor;
-      text-align: right;
-    }
-
-    hr {
-      width: 1;
-      size: 100%;
-      color: #969595;
-    }
-
-    .world-numbers {
-      font-size: 1.2rem;
-      font-family: 'Noto Sans', sans-serif;
-    }
+  h2 {
+    width: 90%;
+    color: $primaryColor;
+    font-size: 1.4rem;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: bold;
   }
 
-  .country-report {
+  .world-report {
     display: flex;
-    width: 60%;
-    justify-content: space-evenly;
+    width: 90%;
+    justify-content: space-between;
     margin-top: 1rem;
+    border-bottom: 1px solid $primaryColor;
 
-    .country-labels-inner,
-    .country-numbers-inner {
+    .world-data {
+      font-size: 1.2rem;
+      font-family: 'Noto Sans', sans-serif;
+      font-weight: bold;
+      color: $terciaryColor;
+      text-align: right;
+
+      .world-label {
+        display: flex;
+        margin-bottom: 0.5rem;
+        justify-content: space-between;
+
+        .world-number {
+          margin-left: 1rem;
+          color: $secondaryColor;
+        }
+      }
+    }
+
+    .world-image {
+      img {
+        width: 12rem;
+        height: 12rem;
+        object-fit: contain;
+      }
     }
   }
 
   .country-name {
-    font-family: 'Noto Sans', sans-serif;
-    color: $primaryColor;
-    font-weight: bold;
-    font-size: 1.3rem;
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .country-labels {
-    font-size: 1.2rem;
-    font-family: 'Heebo', sans-serif;
-    color: $secondaryColor;
     text-align: right;
-
-    .country-name-label {
-      display: flex;
-      justify-content: space-between;
-      font-family: 'Heebo', sans-serif;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      text-decoration: underline;
-      cursor: pointer;
-    }
+    margin-top: 4rem;
   }
-  .country-number {
-    font-size: 1.2rem;
-    font-family: 'Noto Sans', sans-serif;
+
+  .country-report {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    margin-top: 1rem;
+    border-bottom: 1px solid $primaryColor;
+
+    .country-data {
+      font-size: 1.2rem;
+      font-family: 'Noto Sans', sans-serif;
+      font-weight: bold;
+      color: $terciaryColor;
+      text-align: right;
+
+      .country-label {
+        display: flex;
+        margin-bottom: 0.5rem;
+        justify-content: space-between;
+      }
+    }
+    .country-number {
+      margin-left: 1rem;
+      color: $secondaryColor;
+    }
   }
 }
 
@@ -125,10 +178,10 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 4rem;
   .search-form {
     .form-group {
-      padding: 0.2rem;
+      padding: 1rem 2rem;
       width: auto;
       border: 2px solid $primaryColor;
       position: relative;
@@ -139,7 +192,7 @@ nav {
         padding: 0 0.6rem;
         color: $secondaryColor;
         background-color: $backgroundColor;
-        font-size: 1rem;
+        font-size: 1.1rem;
         font-family: 'Noto Sans', sans-serif;
         text-transform: uppercase;
       }
@@ -148,7 +201,7 @@ nav {
     input {
       border: none;
       outline: none;
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       font-family: 'Noto Sans', sans-serif;
       background-color: $backgroundColor;
       margin-left: 1rem;
@@ -167,7 +220,7 @@ main {
   display: flex;
   flex-direction: column;
   border: 1px solid $secondaryColor;
-  margin: 1rem 2rem;
+  margin: 2rem 2rem;
   scroll-snap-type: mandatory;
 
   .header-container {
@@ -266,10 +319,62 @@ footer {
   }
 }
 
+@media all and(min-width: 768px) {
+  .totals {
+    h2 {
+      width: 70%;
+    }
+    .world-report,
+    .country-report {
+      width: 70%;
+    }
+  }
+}
+
+@media all and(min-width: 1024px) {
+  nav {
+    h1 {
+      font-size: 5rem;
+    }
+  }
+
+  .totals {
+    h2 {
+      width: 60%;
+      font-size: 2.5rem;
+    }
+    .world-report,
+    .country-report {
+      width: 60%;
+    }
+
+    .world-data,
+    .country-data {
+      font-size: 2rem;
+    }
+  }
+}
+
 @media all and(min-width: 1360px) {
   main {
     justify-content: center;
   }
+  .totals {
+    h2 {
+      width: 35%;
+      font-size: 3rem;
+    }
+    .world-report,
+    .country-report {
+      width: 35%;
+    }
+
+    .world-data,
+    .country-data {
+      font-size: 2.5rem;
+    }
+  }
+
   .table {
     .header-container {
       .header-row {
