--- a/css/style.scss
+++ b/css/style.scss
@@ -49,7 +49,7 @@ nav {
 .loading-content {
   //display: none;
   position: fixed;
-  top: 7rem;
+  top: 9rem;
   width: 100%;
   height: 100%;
   background-color: $backgroundColor;
@@ -337,7 +337,9 @@ footer {
       font-size: 5rem;
     }
   }
-
+  .loading-content {
+    top: 11rem;
+  }
   .totals {
     h2 {
       width: 60%;
