--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,16 @@ nav img {
   color: #63954f;
 }
 
+.totals .country-report .country-error {
+  width: 100%;
+  font-size: 2rem;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: bold;
+  color: #63954f;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
 .search {
   width: 100%;
   display: -webkit-box;
