--- a/css/style.scss
+++ b/css/style.scss
@@ -171,6 +171,16 @@ nav {
       margin-left: 1rem;
       color: $secondaryColor;
     }
+
+    .country-error {
+      width: 100%;
+      font-size: 2rem;
+      font-family: 'Noto Sans', sans-serif;
+      font-weight: bold;
+      color: $secondaryColor;
+      text-align: center;
+      margin-bottom: 5rem;
+    }
   }
 }
 
