--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,7 @@ nav {
     font-weight: normal;
     line-height: 3rem;
     color: $primaryColor;
+    text-transform: uppercase;
   }
   img {
     height: 4rem;
