--- a/css/style.scss
+++ b/css/style.scss
@@ -154,6 +154,7 @@ nav {
     justify-content: space-between;
     margin-top: 1rem;
     border-bottom: 1px solid $primaryColor;
+    margin-bottom: 4rem;
 
     .country-data {
       font-size: 1.2rem;
@@ -181,6 +182,45 @@ nav {
       color: $secondaryColor;
       text-align: center;
       margin-bottom: 5rem;
+    }
+  }
+}
+
+.deaths-by-age {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  .deaths-by-age-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    border-bottom: 1px solid $primaryColor;
+
+    .deaths-by-age-title {
+      width: 100%;
+      text-align: center;
+      color: $primaryColor;
+      font-size: 1.4rem;
+      font-family: 'Noto Sans', sans-serif;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+
+    .range {
+      display: flex;
+      width: 50%;
+      justify-content: space-between;
+      font-size: 1.2rem;
+      font-family: 'Noto Sans', sans-serif;
+      font-weight: bold;
+      color: $terciaryColor;
+      margin-bottom: 0.5rem;
+
+      .range-number {
+        color: $secondaryColor;
+      }
     }
   }
 }
@@ -238,7 +278,7 @@ nav {
   .refresh-left {
     .last-refresh-time {
       display: flex;
-      font-size: 1.1rem;
+      font-size: 0.9rem;
       font-family: 'Noto Sans', sans-serif;
       color: $secondaryColor;
       font-weight: bold;
@@ -258,7 +298,7 @@ nav {
   }
 
   .refresh-right {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     font-family: 'Noto Sans', sans-serif;
     color: $secondaryColor;
     font-weight: bold;
@@ -385,9 +425,25 @@ footer {
     }
   }
 
+  .deaths-by-age {
+    .deaths-by-age-container {
+      width: 70%;
+    }
+  }
+
   .refresh {
     .refresh-container {
       width: 70%;
+    }
+
+    .refresh-left {
+      .last-refresh-time {
+        font-size: 1.1rem;
+      }
+    }
+
+    .refresh-right {
+      font-size: 1.1rem;
     }
   }
 }
@@ -416,6 +472,16 @@ footer {
       font-size: 2rem;
     }
   }
+
+  .deaths-by-age {
+    .deaths-by-age-container {
+      width: 60%;
+      .deaths-by-age-title {
+        font-size: 2.5rem;
+      }
+    }
+  }
+
   .refresh {
     .refresh-container {
       width: 60%;
@@ -440,6 +506,18 @@ footer {
     .world-data,
     .country-data {
       font-size: 2.5rem;
+    }
+  }
+
+  .deaths-by-age {
+    .deaths-by-age-container {
+      width: 35%;
+      .deaths-by-age-title {
+        font-size: 3rem;
+      }
+      .range {
+        font-size: 1.2rem;
+      }
     }
   }
 
